<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_simulate"
        android:title="@string/action_simulate"
        app:showAsAction="withText|always"/>

    <item android:id="@+id/action_connect_disconnect" android:title="@string/action_connect"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_support" android:title="@string/action_support"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
